# py-orca

./: .coveragerc  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Pipfile  README.md  demo.py  demo_nf_logs.py  dev_setup.sh  pyproject.toml  requirements-airflow.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: conf.py  index.md  requirements.txt
src/docker/: Dockerfile  build.sh
src/orca/: __init__.py  constants.py  errors.py
src/orca/airflow/: __init__.py  provider_info.py
src/orca/services/: __init__.py
src/orca/services/base/: __init__.py  client_factory.py  config.py  hook.py  ops.py
src/orca/services/nextflowtower/: __init__.py  client.py  client_factory.py  config.py  hook.py  models.py  ops.py  utils.py
src/orca/services/nextflowtower/models/: enums.py
src/orca/services/sevenbridges/: __init__.py  client.py  client_factory.py  config.py  hook.py  models.py  ops.py  tasks.py
src/orca/services/synapse/: __init__.py  client_factory.py  config.py  hook.py  ops.py
tests/: conftest.py  test_import.py
tests/acceptance/: test_cavatica.py
tests/airflow/: test_provider_info.py
tests/services/base/: conftest.py  test_client_factory.py  test_config.py  test_hook.py  test_meta.py  test_ops.py
tests/services/nextflowtower/: conftest.py  responses.py  test_client.py  test_config.py  test_enums.py  test_integration.py  test_models.py  test_ops.py  test_utils.py
tests/services/sevenbridges/: conftest.py  test_client.py  test_client_factory.py  test_hook.py  test_models.py  test_ops.py  test_tasks.py
tests/services/synapse/: conftest.py  test_integration.py  test_ops.py
